Actualizacion de Ms.Usuario

--- a/MsUsuario/src/main/resources/application.properties
+++ b/MsUsuario/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# Configuración para MsSecurity
+spring.application.name=MsSecurity
+server.port=8081
 
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3307/db_security
+spring.datasource.username=root
+spring.datasource.password=123456
+
+# Activa el perfil mysql
+spring.profiles.active=mysql
