--- a/MsHabitacion/src/main/resources/application.properties
+++ b/MsHabitacion/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.application.name=gestionHabitacion
+server.port=82
+
+# MySQL
+# spring.datasource.url=jdbc:mysql://localhost:3307/db_security
+spring.datasource.url=jdbc:postgresql://localhost:5433/bd_Habitacion
+
+spring.datasource.username=postgres
+spring.datasource.password=Unu#2023
 
