--- a/MsCliente/pom.xml
+++ b/MsCliente/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.2.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>MsHospedaje</groupId>
+	<groupId>MsCliente</groupId>
 	<artifactId>MsCliente</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>MsCliente</name>
@@ -19,7 +19,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
