--- a/MsCliente/src/main/resources/application.properties
+++ b/MsCliente/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=83
 
+# MySQL
+# spring.datasource.url=jdbc:mysql://localhost:3307/db_security
+# spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Ventas;encrypt=false
+spring.datasource.url=jdbc:sqlserver://localhost:1434;databaseName=bd_Clientes;encrypt=false;trustServerCertificate=false
+
+spring.datasource.username=SA
+spring.datasource.password=Unu#2023
