--- a/MsReservaHabitacion/src/main/resources/application.properties
+++ b/MsReservaHabitacion/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=gestionReservaHabitacion
+server.port=82
 
+# MySQL
+# spring.datasource.url=jdbc:mysql://localhost:3307/db_security
+spring.datasource.url=jdbc:postgresql://localhost:5433/bd_ReservaHabitacion
+
+spring.datasource.username=postgres
+spring.datasource.password=Unu#2023
