Creaccion Mapper en Usuario

--- a/MsUsuario/src/main/resources/application.properties
+++ b/MsUsuario/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# Configuración para MsSecurity
-spring.application.name=MsSecurity
+# Configuración para MsUsuario
+spring.application.name=MsUsuario
 server.port=8081
 
 # MySQL
@@ -9,3 +9,6 @@ spring.datasource.password=123456
 
 # Activa el perfil mysql
 spring.profiles.active=mysql
+
+#JWT
+jwt.secret=Key#SuperSecret$PolyglotTest#JavaMicroservices#940527000
