--- a/MsReservaHabitacion/src/main/resources/application.properties
+++ b/MsReservaHabitacion/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-spring.application.name=gestionReservaHabitacion
-server.port=82
+spring.application.name=app-transaction
+server.port=84
 
-# MySQL
-# spring.datasource.url=jdbc:mysql://localhost:3307/db_security
-spring.datasource.url=jdbc:postgresql://localhost:5433/bd_ReservaHabitacion
-
-spring.datasource.username=postgres
-spring.datasource.password=Unu#2023
+# mongoDB
+spring.data.mongodb.uri=mongodb://admin:Unu#2023@localhost:27018/ReservaHabitacion?authSource=admin
