--- a/MsUsuario/pom.xml
+++ b/MsUsuario/pom.xml
@@ -43,13 +43,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- postgresql -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
 		<!-- springframework -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -75,6 +68,11 @@
             <version>0.11.1</version>
             <scope>runtime</scope>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -85,5 +83,18 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<configuration>
+    <appender name="FILE" class="ch.qos.logback.core.FileAppender">
+        <file>myApp.log</file>
+        <encoder>
+            <pattern>%date %level [%thread] %logger{10} [%file:%line] %msg%n</pattern>
+        </encoder>
+    </appender>
+
+    <root level="debug">
+        <appender-ref ref="FILE" />
+    </root>
+</configuration>
 
 </project>
