--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "interactive",
     "java.project.referencedLibraries": [
-        "MsUsuario/src/main/java",
+        "MsUsuario/src/main/java/MsHospedaje/MsUsuario",
         "MsHabitacion/src/main/java",
         "MsCliente/src/main/java",
         "MsReservaHabitacion/src/main/java"
