--- a/MsUsuario/src/main/resources/application-docker.properties
+++ b/MsUsuario/src/main/resources/application-docker.properties
@@ -1,11 +1,11 @@
-# Configuración para MsUsuario
-spring.application.name=MsUsuario
-server.port=81
+# # Configuración para MsUsuario
+# spring.application.name=MsUsuario
+# server.port=81
 
-# MySQL
-spring.datasource.url=jdbc:mysql://mysql-container:3307/db_security
-spring.datasource.username=root
-spring.datasource.password=123456
+# # MySQL
+# spring.datasource.url=jdbc:mysql://mysql-container:3307/db_security
+# spring.datasource.username=root
+# spring.datasource.password=123456
 
-# Activa el perfil docker
-spring.profiles.active=docker
+# # Activa el perfil docker
+# spring.profiles.active=docker
