--- a/MsUsuarios/src/main/resources/application.properties
+++ b/MsUsuarios/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=MsSecurity
+server.port=8081
 
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3307/db_security
+spring.datasource.username=root
+spring.datasource.password=123456
